--- a/quickstart-flink/quickstart-datastream/datastream_1.16/assembly/conf/application.yml
+++ b/quickstart-flink/quickstart-datastream/datastream_1.16/assembly/conf/application.yml
@@ -78,7 +78,7 @@ flink:
 # kafka source
 app:
   kafka.source:
-    bootstrap.servers: localhost:9092
+    bootstrap.servers: hadoop101:9092
     topic: streampark
     group.id: test
     auto.offset.reset: earliest
@@ -86,6 +86,6 @@ app:
   # mysql
   jdbc:
     driverClassName: com.mysql.cj.jdbc.Driver
-    jdbcUrl: jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false
+    jdbcUrl: jdbc:mysql://hadoop101:3306/test?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false
     username: root
-    password: 123322242
+    password: 128505tan
