--- a/meiotds-develop/pom.xml
+++ b/meiotds-develop/pom.xml
@@ -39,6 +39,13 @@
                 <scope>compile</scope>
             </dependency>
 
+            <!--  使用 hadoop 存储 flink 状态后端          -->
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-client</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+
             <!--  https://flink.apache.org/downloads/#maven-dependencies      -->
             <!--  flink java data-stream api 基础依赖      -->
             <dependency>
@@ -64,6 +71,14 @@
                 <artifactId>flink-connector-kafka</artifactId>
                 <version>${flink.version}</version>
             </dependency>
+
+            <!--    flink 文件系统连接器        -->
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-connector-files</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+
 
         </dependencies>
 
