--- a/meiotds-develop/pom.xml
+++ b/meiotds-develop/pom.xml
@@ -24,7 +24,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <file_encoding>UTF-8</file_encoding>
 
+        <hutool.all.version>5.8.11</hutool.all.version>
         <flink.version>1.16.0</flink.version>
+        <slf4j.version>1.7.32</slf4j.version>
+        <log4j2.version>2.17.1</log4j2.version>
         <hadoop.version>3.1.3</hadoop.version>
     </properties>
 
@@ -37,6 +40,14 @@
                 <artifactId>lombok</artifactId>
                 <version>RELEASE</version>
                 <scope>compile</scope>
+            </dependency>
+
+            <!--  https://www.hutool.cn/docs/#/          -->
+            <!--  hutool 工具包          -->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.all.version}</version>
             </dependency>
 
             <!--  使用 hadoop 存储 flink 状态后端          -->
@@ -52,16 +63,46 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-java</artifactId>
                 <version>${flink.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-streaming-java</artifactId>
                 <version>${flink.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-clients</artifactId>
                 <version>${flink.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <!--   https://nightlies.apache.org/flink/flink-docs-release-1.16/docs/deployment/advanced/logging/         -->
+            <!--   flink log4j 日志         -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+                <!--                <scope>provided</scope>-->
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>${log4j2.version}</version>
+                <!--                <scope>provided</scope>-->
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j2.version}</version>
+                <!--                <scope>provided</scope>-->
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j2.version}</version>
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <!--    https://nightlies.apache.org/flink/flink-docs-release-1.16/docs/connectors/datastream/kafka/        -->
@@ -78,7 +119,6 @@
                 <artifactId>flink-connector-files</artifactId>
                 <version>${flink.version}</version>
             </dependency>
-
 
         </dependencies>
 
