--- a/meiotds-develop/mkt-develop/pom.xml
+++ b/meiotds-develop/mkt-develop/pom.xml
@@ -89,6 +89,19 @@
             <artifactId>flink-connector-files</artifactId>
         </dependency>
 
+        <!--   https://nightlies.apache.org/flink/flink-docs-release-1.16/docs/connectors/datastream/jdbc/         -->
+        <!--   flink jdbc connector         -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-jdbc</artifactId>
+        </dependency>
+
+        <!--    taos TDengine jdbc 驱动依赖包        -->
+        <dependency>
+            <groupId>com.taosdata.jdbc</groupId>
+            <artifactId>taos-jdbcdriver</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
