--- a/meiotds-develop/pom.xml
+++ b/meiotds-develop/pom.xml
@@ -29,6 +29,8 @@
         <slf4j.version>1.7.32</slf4j.version>
         <log4j2.version>2.17.1</log4j2.version>
         <hadoop.version>3.1.3</hadoop.version>
+
+        <taos.jdbc.version>3.1.0</taos.jdbc.version>
     </properties>
 
     <dependencyManagement>
@@ -118,6 +120,21 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-connector-files</artifactId>
                 <version>${flink.version}</version>
+            </dependency>
+
+            <!--   https://nightlies.apache.org/flink/flink-docs-release-1.16/docs/connectors/datastream/jdbc/         -->
+            <!--   flink jdbc connector         -->
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-connector-jdbc</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+
+            <!--    taos TDengine jdbc 驱动依赖包        -->
+            <dependency>
+                <groupId>com.taosdata.jdbc</groupId>
+                <artifactId>taos-jdbcdriver</artifactId>
+                <version>${taos.jdbc.version}</version>
             </dependency>
 
         </dependencies>
